# learning_rust_dl

./: .gitignore  Cargo.toml
src/: deep_learning.rs  dl4wasm.rs  lib.rs  main.rs
src/cnn/: mod.rs
src/cnn/layers/: cnn_layer.rs  convolution.rs  mod.rs  value.rs
src/deep_learning/: activation_functions.rs  activation_layers.rs  affine_layer.rs  batch_norm.rs  common.rs  dropout_layer.rs  graph_plotter.rs  layer.rs  layers.rs  logical_operators.rs  loss_functions.rs  mnist.rs  mod.rs  network.rs  network_layers.rs  network_learning.rs  neural_network.rs  neural_network_learning.rs  optimizer.rs  softmax_with_loss.rs
src/deep_learning/layer/: affine.rs  affine_direct_value.rs  batch_norm.rs  convolution.rs  direct_value.rs  dropout.rs  network_layer.rs  pooling.rs  relu.rs  sigmoid.rs  softmax_with_loss.rs
www/: package-lock.json  package.json  webpack.config.js
www/src/: index.html
www/src/script/: deep_learning_wrapper.js  index.js  main.js
