[package]
name = "deep_learning"
version = "0.1.0"
authors = ["iofuwisa <ootuka70@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
ndarray = "0.15.0"
mnist = "0.4.1"
rulinalg="0.4.2"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
rand = "0.8.4"
plotters = "0.3.1"
chrono = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
mockall = "0.10.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"